--- a/space-bio-engine-ui/index.html
+++ b/space-bio-engine-ui/index.html
@@ -217,7 +217,8 @@
             container.innerHTML = results.map(r => `
                 <div class="bg-white p-6 rounded-xl shadow-lg hover:shadow-xl transition duration-300 border border-gray-100 space-y-3">
                     <div class="flex items-center justify-between">
-                        <h3 class="text-xl font-bold text-nasa-blue leading-snug">${r.title}</h3>
+                        <!-- FIX: Added min-w-0 to allow the title text to wrap and prevent the flex container from overflowing the card boundary -->
+                        <h3 class="text-xl font-bold text-nasa-blue leading-snug min-w-0">${r.title}</h3>
                         <!-- REPLACED simple pill with Visual Risk Gauge -->
                         <div class="w-32 flex-shrink-0 ml-4">
                             ${getRiskGaugeHtml(r.riskLevel, r.missionRisk)}
@@ -481,3 +482,4 @@
 
 </body>
 </html>
+
